@@ -2,6 +2,10 @@ package uk.gov.hmcts.reform.preapi.tasks;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import uk.gov.hmcts.reform.preapi.dto.AccessDTO;
+import uk.gov.hmcts.reform.preapi.dto.UserDTO;
+import uk.gov.hmcts.reform.preapi.dto.base.BaseAppAccessDTO;
 import uk.gov.hmcts.reform.preapi.entities.Booking;
 import uk.gov.hmcts.reform.preapi.entities.CaptureSession;
 import uk.gov.hmcts.reform.preapi.enums.RecordingOrigin;
@@ -13,14 +17,20 @@ import uk.gov.hmcts.reform.preapi.services.UserService;
 import uk.gov.hmcts.reform.preapi.util.HelperFactory;
 
 import java.sql.Timestamp;
-import java.time.LocalDate;
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.tuple;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -46,81 +56,25 @@ public class CaptureSessionStatusCorrectionTaskTest {
             azureIngestStorageService,
             captureSessionService
         );
+
+        UserDTO userDTO = new UserDTO();
+        userDTO.setId(UUID.randomUUID());
+        userDTO.setDeletedAt(null);
+
+        AccessDTO accessDTO = new AccessDTO();
+        accessDTO.setUser(userDTO);
+        BaseAppAccessDTO baseAppAccessDTO = new BaseAppAccessDTO();
+        baseAppAccessDTO.setId(UUID.randomUUID());
+        accessDTO.setAppAccess(Set.of(baseAppAccessDTO));
+        when(userService.findByEmail(anyString())).thenReturn(accessDTO);
+
+        when(userAuthenticationService.validateUser(any()))
+            .thenReturn(Optional.of(
+                mock(uk.gov.hmcts.reform.preapi.security.authentication.UserAuthentication.class)));
     }
 
     @Test
-    void shouldCorrectCaptureSessionStatuses() {
-        Booking booking = HelperFactory.createBooking(
-            null,
-            new Timestamp(System.currentTimeMillis()),
-            new Timestamp(System.currentTimeMillis())
-        );
-
-        CaptureSession captureSession1 = HelperFactory.createCaptureSession(
-            booking,
-            RecordingOrigin.PRE,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            RecordingStatus.FAILURE,
-            null
-        );
-
-        CaptureSession captureSession2 = HelperFactory.createCaptureSession(
-            booking,
-            RecordingOrigin.PRE,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            RecordingStatus.FAILURE,
-            null
-        );
-
-        captureSessionStatusCorrectionTask.correctCaptureSessionStatuses(
-            List.of(captureSession1, captureSession2)
-        );
-
-        assertThat(captureSession1.getStatus()).isEqualTo(RecordingStatus.NO_RECORDING);
-        assertThat(captureSession2.getStatus()).isEqualTo(RecordingStatus.NO_RECORDING);
-
-    }
-
-    @Test
-    void shouldCorrectOneCaptureSessionStatus() {
-        Booking booking = HelperFactory.createBooking(
-            null,
-            new Timestamp(System.currentTimeMillis()),
-            new Timestamp(System.currentTimeMillis())
-        );
-
-        CaptureSession captureSession1 = HelperFactory.createCaptureSession(
-            booking,
-            RecordingOrigin.PRE,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null
-        );
-
-        captureSessionStatusCorrectionTask.correctCaptureSessionStatuses(
-            List.of(captureSession1)
-        );
-
-        assertThat(captureSession1.getStatus()).isEqualTo(RecordingStatus.NO_RECORDING);
-    }
-
-    @Test
-    void shouldFilterUnusedCaptureSessionsBySectionFile() {
+    void shouldUpdateOnlyUnusedCaptureSessions() {
         Booking booking = HelperFactory.createBooking(
             null,
             new Timestamp(System.currentTimeMillis()),
@@ -140,13 +94,13 @@ public class CaptureSessionStatusCorrectionTaskTest {
         CaptureSession captureSession1 = HelperFactory.createCaptureSession(
             booking,
             RecordingOrigin.PRE,
+            "ingest",
+            "liveOutput",
+            Timestamp.from(Instant.now()),
             null,
             null,
             null,
-            null,
-            null,
-            null,
-            null,
+            RecordingStatus.FAILURE,
             null
         );
 
@@ -159,48 +113,71 @@ public class CaptureSessionStatusCorrectionTaskTest {
             null,
             null,
             null,
-            null,
+            RecordingStatus.FAILURE,
             null
         );
 
+        when(captureSessionService.findFailedCaptureSessionsStartedBetween(any(), any())).thenReturn(
+            Arrays.asList(captureSession1, captureSession2)
+        );
         when(azureIngestStorageService.sectionFileExist("786c62de-a8c9-448d-919c-0038061413d5")).thenReturn(true);
         when(azureIngestStorageService.sectionFileExist("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0")).thenReturn(false);
 
-        List<CaptureSession> results = captureSessionStatusCorrectionTask.filterUnusedCaptureSessionsBySectionFile(
-            List.of(captureSession1, captureSession2));
+        captureSessionStatusCorrectionTask.run();
 
-        assertThat(results.size()).isEqualTo(1);
-        assertThat(results.getFirst().getBooking().getId())
-            .isEqualTo(UUID.fromString("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0"));
+        verify(captureSessionService, never())
+            .save(argThat(cs -> cs.getId().equals(captureSession1.getId())));
+        verify(captureSessionService, times(1))
+            .save(argThat(cs -> {
+                assertThat(cs.getId()).isEqualTo(captureSession2.getId());
+                assertThat(cs.getStatus()).isEqualTo(RecordingStatus.NO_RECORDING);
+                return true;
+            }));
     }
 
     @Test
-    void shouldHandleFilteringNullCaptureSessions() {
-        CaptureSession captureSession1 = null;
-        CaptureSession captureSession2 = null;
-        List<CaptureSession> results = captureSessionStatusCorrectionTask.filterUnusedCaptureSessionsBySectionFile(
-            Arrays.asList(captureSession1, captureSession2));
+    void shouldDoNothingWhenNoUnusedCaptureSessions() {
+        when(captureSessionService.findFailedCaptureSessionsStartedBetween(any(), any())).thenReturn(
+            List.of()
+        );
 
-        assertThat(results.size()).isEqualTo(0);
+        captureSessionStatusCorrectionTask.run();
+        verify(captureSessionService, never()).save(any());
     }
 
     @Test
-    void shouldHandleFilteringCaptureSessionsWithNullBooking() {
+    void shouldUpdateAllFailedCaptureSessionsIfAllAreUnused() {
+        Booking booking = HelperFactory.createBooking(
+            null,
+            new Timestamp(System.currentTimeMillis()),
+            new Timestamp(System.currentTimeMillis())
+        );
+
+        booking.setId(UUID.fromString("786c62de-a8c9-448d-919c-0038061413d5"));
+
+        Booking booking2 = HelperFactory.createBooking(
+            null,
+            new Timestamp(System.currentTimeMillis()),
+            new Timestamp(System.currentTimeMillis())
+        );
+
+        booking2.setId(UUID.fromString("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0"));
+
         CaptureSession captureSession1 = HelperFactory.createCaptureSession(
-            null,
+            booking,
             RecordingOrigin.PRE,
+            "ingest",
+            "liveOutput",
+            Timestamp.from(Instant.now()),
             null,
             null,
             null,
-            null,
-            null,
-            null,
-            null,
+            RecordingStatus.FAILURE,
             null
         );
 
         CaptureSession captureSession2 = HelperFactory.createCaptureSession(
-            null,
+            booking2,
             RecordingOrigin.PRE,
             null,
             null,
@@ -208,21 +185,114 @@ public class CaptureSessionStatusCorrectionTaskTest {
             null,
             null,
             null,
-            null,
+            RecordingStatus.FAILURE,
             null
         );
 
-        List<CaptureSession> results = captureSessionStatusCorrectionTask.filterUnusedCaptureSessionsBySectionFile(
-            List.of(captureSession1, captureSession2));
+        when(captureSessionService.findFailedCaptureSessionsStartedBetween(any(), any())).thenReturn(
+            Arrays.asList(captureSession1, captureSession2)
+        );
+        when(azureIngestStorageService.sectionFileExist("786c62de-a8c9-448d-919c-0038061413d5")).thenReturn(false);
+        when(azureIngestStorageService.sectionFileExist("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0")).thenReturn(false);
 
-        assertThat(results.size()).isEqualTo(0);
+        captureSessionStatusCorrectionTask.run();
+
+        ArgumentCaptor<CaptureSession> captor = ArgumentCaptor.forClass(CaptureSession.class);
+        verify(captureSessionService, times(2)).save(captor.capture());
+        assertThat(captor.getAllValues())
+            .extracting("id", "status")
+            .containsExactlyInAnyOrder(
+                tuple(captureSession1.getId(), RecordingStatus.NO_RECORDING),
+                tuple(captureSession2.getId(), RecordingStatus.NO_RECORDING)
+            );
     }
 
     @Test
-    void getFailedCaptureSessions() {
-        captureSessionStatusCorrectionTask.getFailedCaptureSessions();
+    void shouldUpdateNoFailedCaptureSessionsIfNoneUnused() {
+        Booking booking = HelperFactory.createBooking(
+            null,
+            new Timestamp(System.currentTimeMillis()),
+            new Timestamp(System.currentTimeMillis())
+        );
 
-        verify(captureSessionService, times(1))
-            .findFailedCaptureSessionsStartedBetween(any(LocalDate.class), any(LocalDate.class));
+        booking.setId(UUID.fromString("786c62de-a8c9-448d-919c-0038061413d5"));
+
+        Booking booking2 = HelperFactory.createBooking(
+            null,
+            new Timestamp(System.currentTimeMillis()),
+            new Timestamp(System.currentTimeMillis())
+        );
+
+        booking2.setId(UUID.fromString("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0"));
+
+        CaptureSession captureSession1 = HelperFactory.createCaptureSession(
+            booking,
+            RecordingOrigin.PRE,
+            "ingest",
+            "liveOutput",
+            Timestamp.from(Instant.now()),
+            null,
+            null,
+            null,
+            RecordingStatus.FAILURE,
+            null
+        );
+
+        CaptureSession captureSession2 = HelperFactory.createCaptureSession(
+            booking2,
+            RecordingOrigin.PRE,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            RecordingStatus.FAILURE,
+            null
+        );
+
+        when(captureSessionService.findFailedCaptureSessionsStartedBetween(any(), any())).thenReturn(
+            Arrays.asList(captureSession1, captureSession2)
+        );
+        when(azureIngestStorageService.sectionFileExist("786c62de-a8c9-448d-919c-0038061413d5")).thenReturn(true);
+        when(azureIngestStorageService.sectionFileExist("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0")).thenReturn(true);
+
+        captureSessionStatusCorrectionTask.run();
+
+        verify(captureSessionService, never()).save(any());
+    }
+
+    @Test
+    void shouldHandleSaveThrowingException() {
+        Booking booking = HelperFactory.createBooking(
+            null,
+            new Timestamp(System.currentTimeMillis()),
+            new Timestamp(System.currentTimeMillis())
+        );
+
+        booking.setId(UUID.fromString("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0"));
+
+        CaptureSession captureSession = HelperFactory.createCaptureSession(
+            booking,
+            RecordingOrigin.PRE,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            RecordingStatus.FAILURE,
+            null
+        );
+
+        when(captureSessionService.findFailedCaptureSessionsStartedBetween(any(), any())).thenReturn(
+            List.of(captureSession)
+        );
+        when(azureIngestStorageService.sectionFileExist("04ab4e94-bb8a-42cd-929f-1e3e02b54bc0")).thenReturn(false);
+        when(captureSessionService.save(any())).thenThrow(new RuntimeException("Database error"));
+
+        captureSessionStatusCorrectionTask.run();
+
+        verify(captureSessionService, times(1)).save(any());
     }
 }
